@@ -1,5 +1,5 @@
 package org.irods.jargon.core.utils;
 public final class JargonVersion {
  public static String VERSION="3.3.2-SNAPSHOT";
- public static String BUILD_TIME="20130802-1534";
+ public static String BUILD_TIME="20130806-1548";
 }
