@@ -41,6 +41,9 @@ Note that the following bug and feature requests are logged in GForge with relat
 *[#1618] performance issue with extra flushes in IRODSCommands
 **restructured the flush() commands in IRODSCommands to improve stream performance
 
+*[#1626] order by missing in list data obj acl causing permissions to be off
+**Add explicit order by to specific queries in jargon_specquery.sh and update unit tests for listings with permissions
+
 ==Features==
 
 
